--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <title>Angular 2 Built-in Directives</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+
     <script src="systemjs.config.js"></script>
     <script>
         System.import('app').catch(function(err){ console.error(err); });
